# anchor

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  setup-tests.sh
.github/workflows/: downstream-builds.yaml  no-caching-tests.yaml  prepare-release.yaml  release.yaml  reusable-tests.yaml  semver-checks.yaml  template-tests.yaml  tests.yaml
avm/: Cargo.toml
avm/src/: attestation.rs  lib.rs  main.rs
cli/: Cargo.toml
cli/src/: config.rs  lib.rs  program.rs  template.rs
client/: Cargo.toml
client/src/: cluster.rs
docker/: Makefile
docs-v2/src/content/docs/v1/get-started/: installation.mdx
docs-v2/src/content/docs/v1/reference/: anchor-toml.mdx
docs/content/docs/: installation.mdx
docs/content/docs/references/: anchor-toml.mdx  avm.mdx
idl/: Cargo.toml
idl/spec/: Cargo.toml
lang/: Cargo.toml
lang/attribute/access-control/: Cargo.toml
lang/attribute/account/: Cargo.toml
lang/attribute/constant/: Cargo.toml
lang/attribute/error/: Cargo.toml
lang/attribute/event/: Cargo.toml
lang/attribute/program/: Cargo.toml
lang/attribute/program/src/declare_program/: common.rs  mod.rs
lang/derive/accounts/: Cargo.toml
lang/derive/serde/: Cargo.toml
lang/derive/space/: Cargo.toml
lang/error/: Cargo.toml
lang/src/accounts/: lazy_account.rs
lang/syn/: Cargo.toml
lang/syn/src/codegen/program/: cpi.rs
spl/: Cargo.toml
tests/declare-program/idls/: mpl_core_shape.json
tests/declare-program/programs/declare-program/src/: lib.rs
tests/lazy-account/programs/lazy-account/src/: lib.rs
tests/lazy-account/tests/: lazy-account.ts
(+2 files in other folders)
