[package]
name = "anchor-lang-idl-spec"
version = "0.1.0"
publish = false
repository.workspace = true
edition = "2021"
license = "Apache-2.0"
description = "Anchor framework IDL spec"

[package.metadata.docs.rs]
workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
